[gd_scene load_steps=6 format=3 uid="uid://bd24ia8p2suh3"]

[ext_resource type="Script" path="res://mats/enemys/temp_enemys1/e1/enemy1.gd" id="1_mbdqc"]
[ext_resource type="Script" path="res://mats/boxes/hurt_box.gd" id="2_wda6v"]
[ext_resource type="Script" path="res://mats/boxes/hitbox.gd" id="3_koneb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pb7nn"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fofif"]
radius = 8.0

[node name="enemy" type="RigidBody2D"]
collision_layer = 17
collision_mask = 17
can_sleep = false
lock_rotation = true
freeze_mode = 1
script = ExtResource("1_mbdqc")
life_points_to = 1.0
defence_from = 1.0
defence_to = 1.2
mny_from = -1
mny_to = 3
pos_from = 0.0
pos_to = 0.0

[node name="c" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pb7nn")

[node name="hurt_box" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitoring = false
monitorable = false
script = ExtResource("2_wda6v")
m_he = 2

[node name="col" type="CollisionShape2D" parent="hurt_box"]
rotation = 1.5708
shape = SubResource("CircleShape2D_fofif")

[node name="Timer" type="Timer" parent="hurt_box"]

[node name="hirtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
monitoring = false
monitorable = false
script = ExtResource("3_koneb")

[node name="col" type="CollisionPolygon2D" parent="hirtbox"]

[node name="Timer" type="Timer" parent="hirtbox"]
wait_time = 0.05

[node name="get_hero_body" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="c" type="CollisionPolygon2D" parent="get_hero_body"]

[node name="r" type="RayCast2D" parent="get_hero_body"]
target_position = Vector2(0, 0)
collision_mask = 9

[node name="na" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 5.0
avoidance_enabled = true
max_speed = 100000.0
debug_enabled = true

[connection signal="area_entered" from="hurt_box" to="hurt_box" method="_on_area_entered" flags=18]
[connection signal="invi_ended" from="hurt_box" to="hurt_box" method="_on_hurt_box_invi_ended" flags=18]
[connection signal="invi_started" from="hurt_box" to="hurt_box" method="_on_hurt_box_invi_started" flags=18]
[connection signal="no_he" from="hurt_box" to="." method="_on_hurt_box_no_he"]
[connection signal="timeout" from="hurt_box/Timer" to="hurt_box" method="_on_Timer_timeout" flags=18]
[connection signal="timeout" from="hirtbox/Timer" to="hirtbox" method="_on_Timer_timeout" flags=18]
[connection signal="body_entered" from="get_hero_body" to="." method="_on_get_hero_body_body_entered"]
[connection signal="body_exited" from="get_hero_body" to="." method="_on_get_hero_body_body_exited"]
[connection signal="velocity_computed" from="na" to="." method="move"]
